[project]
name = "lun-wen"
version = "0.1.0"
description = ""
authors = [
    {name = "MarkusPersad",email = "msp060308@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cdsapi (>=0.7.5,<0.8.0)",
    "xarray (>=2025.1.2,<2026.0.0)",
    "rioxarray (>=0.18.2,<0.19.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyogrio (>=0.10.0,<0.11.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "gdal (>=3.10.2,<4.0.0)",
    "h5netcdf (>=1.5.0,<2.0.0)",
    "numba (>=0.61.0,<0.62.0)",
    "dask (>=2025.2.0,<2026.0.0)",
    "pymannkendall (>=1.4.3,<2.0.0)",
]
[tool.poetry.dependencies]
python = ">=3.13, <4"

[tool.poetry]
packages = [{include = "lun_wen", from = "src"}]


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
